@@ -13,6 +13,11 @@ GNU coreutils NEWS                                    -*- outline -*-
   and rpc_pipefs. Also Minix V3 is displayed correctly as minix3, not minux3.
   [bug introduced in coreutils-8.1]
 
+  tail -f (inotify-enabled) once again works with remote files.
+  The use of inotify with remote files meant that any changes to those
+  files that was not done from the local system would go unnoticed.
+  [bug introduced in coreutils-7.5]
+
   touch -a once again guarantees that a file's change time is
   adjusted, working around a bug in current Linux kernels.
   [bug introduced in coreutils-8.1]
